adding in files testing git on new computer

--- a/README
+++ b/README
@@ -15,4 +15,4 @@ Reports are able to be printed and used as end of year.
 Students are able to be transferred between schools prior to starting to
 allow new schools to actively review the students prior to starting
 
-Students can their full school scores with them for life. 
+Students can carry their full academic results with them for life. 
